--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 			{% include analytics.html %}
 		</head>
 		<body>
+			{% include bootstrapFallbackToLocal.html %}
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
