--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -12,6 +12,7 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
 a {
     text-decoration: none;
     color: #999;
@@ -21,7 +22,6 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
@@ -31,6 +31,8 @@ p {
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
+    position: absolute;
+    bottom : 0;
 }
 
 ul.posts { 
@@ -40,4 +42,16 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
+}
+
+/*** FONTS ***/
+
+/* Font to be used for headers */
+.hFont {
+    font-family: 'Cantata One', serif;
+}
+
+/* Font to be used for paragraphs */
+.pFont{
+    font-family: 'Imprima', sans-serif;
 }
