--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,13 @@
 			<!-- page title -->
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel="stylesheet" type="text/css" href="css/main.css">
 			<!-- link to google fonts -->
 			<link href='http://fonts.googleapis.com/css?family=Cantata+One' rel='stylesheet' type='text/css'>
 			<link href='http://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
 			{% include analytics.html %}
 		</head>
-		<body>
+		<body class="pFont">
 			{% include bootstrapFallbackToLocal.html %}
 			<nav>
 	    		<ul>
