--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
+    font-family: 'Imprima', sans-serif;
 }
 
 nav ul, footer ul {
@@ -22,6 +23,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
+     font-family: 'Cantata One', serif;
 }
 p {
     font-size: 1.5em;
