--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 			<link href='http://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
 			{% include analytics.html %}
 		</head>
-		<body>
+		<body class="pFont">
 			{% include bootstrapFallbackToLocal.html %}
 			<nav>
 	    		<ul>
