--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 body {
     margin: 60px auto;
     width: 70%;
-    font-family: 'Imprima', sans-serif;
 }
 
 nav ul, footer ul {
@@ -23,7 +22,6 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family: 'Cantata One', serif;
 }
 p {
     font-size: 1.5em;
@@ -46,10 +44,10 @@ ul.posts li {
     list-style: none;
 }
 
-.hFont {
+/** FONTS **/
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Cantata One', serif;
 }
-
-.pFont {
+p, div, a {
     font-family: 'Imprima', sans-serif;
 }
