--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
-    background: url(wave.png) repeat 0 0;
+    background: url('wave.png') repeat 0 0;
 }
 
 nav ul, footer ul {
