--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
     margin: 60px auto;
     width: 70%;
     background: url('wave.png') repeat 0 0;
+    background-color: red;
 }
 
 nav ul, footer ul {
