--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,15 @@
 			<!-- link to google fonts -->
 			<link href='http://fonts.googleapis.com/css?family=Cantata+One' rel='stylesheet' type='text/css'>
 			<link href='http://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
+			<link rel="stylesheet" href="/css/font-awesome.css">
 			{% include analytics.html %}
 		</head>
 		<body>
 			{% include bootstrapFallbackToLocal.html %}
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
+	        		<li><a href="/"><i class="fa fa-home"></i>>Home</a></li>
+		        	<li><a href="/about"><i class="fa fa-info-circle">About</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
