--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,21 @@
 			<link href='http://fonts.googleapis.com/css?family=Cantata+One' rel='stylesheet' type='text/css'>
 			<link href='http://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
 			<link rel="stylesheet" href="/css/font-awesome.css">
+			<!-- javascript -->
+			<script 
+				src="https://code.jquery.com/jquery-3.1.1.min.js"
+				integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  				crossorigin="anonymous">
+			</script>
+			<!-- Latest compiled and minified JavaScript -->
+			<script 
+				src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+				integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+				crossorigin="anonymous">
+			</script>
 			{% include analytics.html %}
 		</head>
 		<body>
-			{% include bootstrapFallbackToLocal.html %}
 			<nav>
 	    		<ul>
 	        		<li><a href="/"><i class ="icon-home"></i>Home</a></li>
