--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/"><i class ="icon-home"></i>Home</a></li>
-		        	<li><a href="/about"><i class="icon-info-circle"></i>About</a></li>
+	        		<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
+		        	<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
