--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 			<!-- link to google fonts -->
 			<link href='http://fonts.googleapis.com/css?family=Cantata+One' rel='stylesheet' type='text/css'>
 			<link href='http://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
-			<link rel="stylesheet" href="/css/font-awesome.css">
+			<link rel="stylesheet" href="css/font-awesome.css">
 			<!-- javascript -->
 			<script 
 				src="https://code.jquery.com/jquery-3.1.1.min.js"
