--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background: url(/img/wave.png) repeat 0 0;
+    background: url(/img/wave.png) repeat 0 0 fixed;
 }
 
 nav ul, footer ul {
