--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
       				integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
 			      	crossorigin="anonymous">
 			<!-- link to google fonts -->
-			<link href='http://fonts.googleapis.com/css?family=Cantata+One' rel='stylesheet' type='text/css'>
-			<link href='http://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Cantata+One' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
 			<link rel="stylesheet" href="css/font-awesome.css">
 			<!-- javascript -->
 			<script 
