--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,16 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<!-- page title -->
 			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="css/main.css">
-			<!-- Latest compiled and minified CSS -->
+			<!-- bootstrap minified CSS -->
 			<link   rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
       				integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
 			      	crossorigin="anonymous">
+			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="css/main.css">
 			<!-- link to google fonts -->
 			<link href='https://fonts.googleapis.com/css?family=Cantata+One' rel='stylesheet' type='text/css'>
 			<link href='https://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
+			<!-- font awesome -->
 			<link rel="stylesheet" href="css/font-awesome.css">
 			<!-- javascript -->
 			<script 
