--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,29 @@ body {
     background: url(/img/wave.png) repeat 0 0 fixed;
 }
 
+/* NAV and FOOTER */
 nav ul, footer ul {
     padding: 0px;
-    padding-right: 5px;
+    margin-right: 20px;
     list-style: none;
     font-weight: bold;
 }
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+}
+
+footer {
+    border-top: 1px solid #d5d5d5;
+    font-size: .8em;
+    position: absolute;
+    bottom : 0;
+}
+
+/* ICONS */
+
+i {
+    margin: 5px;
 }
 
 a {
@@ -27,12 +41,6 @@ p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-    position: absolute;
-    bottom : 0;
 }
 
 ul.posts { 
