--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 /* NAV and FOOTER */
 nav ul, footer ul {
     padding: 0px;
-    margin-right: 20px;
+    margin-left: 20px;
     list-style: none;
     font-weight: bold;
 }
