--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ ul.posts li {
     float: left;
     height: 100%;
     width: auto;
-    margin-right: 100px;
+    margin-right: 40%;
 }
 
 .blurb{
