--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,8 @@ ul.posts li {
     height: 100%;
     width: auto;
     margin-left: -20%;
+    margin-right: 20 px;
+    margin-bottom: -10%;
 }
 
 .blurb{
