--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,9 @@ ul.posts li {
     position: absolute;
     bottom: 30px;
     left: 20px;
+    max-width: 100%;
+	height: 100%;
+	width: auto\9; /* IE8 */
 }
 
 .blurb{
