--- a/css/main.css
+++ b/css/main.css
@@ -55,11 +55,12 @@ ul.posts li {
 
 #wolf{
     position: absolute;
-    bottom: 30px;
+    bottom: 10%;
+    top: 20%
     left: 20px;
     max-width: 100%;
-	height: 50%;
-	width: auto\9; /* IE8 */
+    height: 70%;
+    width: auto\9; /* IE8 */
 }
 
 .blurb{
