--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ ul.posts li {
     position: absolute;
     bottom: 10%;
     top: 20%
-    left: 20px;
+    right: 90%;
     max-width: 100%;
     height: 70%;
     width: auto\9; /* IE8 */
