--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,8 @@ ul.posts li {
 #wolf{
     position: absolute;
     bottom: 10%;
-    top: 20%
-    right: 90%;
+    top: 20%;
+    left: 20px;
     max-width: 100%;
     height: 70%;
     width: auto\9; /* IE8 */
