--- a/css/main.css
+++ b/css/main.css
@@ -55,9 +55,10 @@ ul.posts li {
 
 #wolf{
     position: relative;
-    bottom: 10%;
-    top: 20%;
-    left: 20px;
+    float left;
+    margin-bottom: 10%;
+    margin-top: 20%;
+    margin-left: 20px;
     max-width: 100%;
     height: 70%;
     width: auto\9; /* IE8 */
