--- a/css/main.css
+++ b/css/main.css
@@ -55,13 +55,20 @@ ul.posts li {
 
 #wolf{
     position: relative;
-    float left;
+    float: left;
+    margin-bottom: 10%;
+    margin-top: 20%;
+    margin-left: 20px;
+    max-width: 100%;
+    height: 70%;
+    width: auto;
 
 }
 
 .blurb{
     position: relative;
     float: left;
+    margin-top: 20%;
 }
 
 /** FONTS **/
