--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /* Background pattern from Subtle Patterns */
 body {
     background: url(/img/wave.png) repeat 0 0 fixed;
+    overflow: hidden;
 }
 
 /* NAV and FOOTER */
@@ -56,9 +57,10 @@ ul.posts li {
 #wolf{
     position: relative;
     float: left;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
     margin-top: 20%;
     margin-left: 20px;
+    margin-right: 100px;
     max-width: 100%;
     height: 70%;
     width: auto;
