--- a/css/main.css
+++ b/css/main.css
@@ -55,12 +55,10 @@ ul.posts li {
 }
 
 #wolf{
-    position: relative;
-    float: left;
-    margin-bottom: 5%;
-    margin-top: 20%;
-    margin-left: 20px;
-    margin-right: 100px;
+    position: absolute;
+    bottom: 5%;
+    top: 20%;
+    left: 20px;
     max-width: 100%;
     height: 70%;
     width: auto;
@@ -70,7 +68,6 @@ ul.posts li {
 .blurb{
     position: relative;
     float: left;
-    margin-top: 20%;
     text-align: center;
 }
 
