--- a/css/main.css
+++ b/css/main.css
@@ -90,9 +90,8 @@ ul.posts li {
 
 .twoColumn{
     width: 49%;
-    max-height: 100%;
+    height: 100%;
     float: left;
-    border: 1px solid red;
 }
 
 /** FONTS **/
