--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,8 @@ ul.posts li {
 
 .twoColumn{
     width: 50%;
-    height: 100%;
+    max-width: 50%;
+    max-height: 100%;
     float: left;
 }
 
