--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,9 @@ ul.posts li {
 /* Paragraph on home page */
 .blurb{
     margin-top: 40%;
+    margin-left: 40%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .twoColumn{
