--- a/css/main.css
+++ b/css/main.css
@@ -75,27 +75,21 @@ ul.posts li {
 /** IDS **/
 
 #wolf{
-    max-width: 50%;
-    position: absolute;
-    bottom: 0;
-    height: 70%;
+    align-self: flex-end;
 }
 
+#homeWrapper{
+     display: inline-flex;
+}
 /** CLASSES **/
 
 /* Paragraph on home page */
 .blurb{
-    margin-top: 40%;
-    margin-left: 51%;
-    max-width: 100%;
-    max-height: 100%;
+    align-self: center;
 }
 
 .twoColumn{
-    width: 50%;
-    max-width: 50%;
-    max-height: 100%;
-    float: left;
+
 }
 
 /** FONTS **/
