--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,10 @@ ul.posts li {
 }
 
 #homeWrapper{
-     display: inline-flex;
+    display: inline-flex;
+    border: 1px solid red;
+    width: 100%;
+    height: 100%;
 }
 /** CLASSES **/
 
