--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,13 +32,13 @@
 			</script>
 			{% include analytics.html %}
 		</head>
-		<body>
-			<nav>
+		<body class="flex">
+			<header>
 	    		<ul>
 	        		<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
 		        	<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
 	    		</ul>
-			</nav>
+			</header>
 			<div class="container">
 			
 			{{ content }}
