--- a/css/main.css
+++ b/css/main.css
@@ -105,9 +105,10 @@ ul.posts li {
 .container{
     width: 100%;
     height: 100%;
-    
     margin: 0;
     padding: 0;
+    
+    align-self: flex-end;
 }
 
 /** FONTS **/
