--- a/css/main.css
+++ b/css/main.css
@@ -104,11 +104,12 @@ ul.posts li {
 
 .container{
     width: 100%;
-    height: 100%;
+    height: 100vw;
     margin: 0;
     padding: 0;
     
-    align-self: flex-end;
+    position: absolute;
+    bottom: 0;
 }
 
 /** FONTS **/
