--- a/css/main.css
+++ b/css/main.css
@@ -104,12 +104,9 @@ ul.posts li {
 
 .container{
     width: 100%;
-    height: 100vw;
+    min-height: 100vw;
     margin: 0;
     padding: 0;
-    
-    position: absolute;
-    bottom: 0;
 }
 
 /** FONTS **/
