--- a/css/main.css
+++ b/css/main.css
@@ -104,9 +104,12 @@ ul.posts li {
 
 .container{
     width: 100%;
-    min-height: 100vw;
+    height: 100%;
     margin: 0;
     padding: 0;
+    
+    position: absolute;
+    bottom: 0;
 }
 
 /** FONTS **/
