--- a/css/main.css
+++ b/css/main.css
@@ -78,13 +78,20 @@ ul.posts li {
     height: 70%;
     max-width: 100%;
     margin-bottom: 10px;
+    margin-right: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+    /* smaller wolf for smaller screens*/
+   #wolf{
+        height: 40%;
+    }
 }
 
 #homeWrapper{
     display: flex;
     flex-direction: row;
     flex: 1;
-    border: 1px solid red;
     width: 100%;
     height: 100%
 }
