--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,12 +33,12 @@
 			{% include analytics.html %}
 		</head>
 		<body class="flex">
-			<header>
+			<nav>
 	    		<ul>
 	        		<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
 		        	<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
 	    		</ul>
-			</header>
+			</nav>
 			<div class="container">
 			
 			{{ content }}
