--- a/css/main.css
+++ b/css/main.css
@@ -102,12 +102,14 @@ ul.posts li {
     align-self: center;
 }
 
+/**
 .flex {
   display: flex;
   min-height: 100vh;
   min-width: 100vw;
   flex-direction: column;
 }
+**/
 
 .container{
     width: 100%;
