--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 		<body class="flex">
 			<nav>
 	    		<ul>
-	        		<li><a href="https://agray5.github.io./"><i class ="fa fa-home"></i>Home</a></li>
+	        		<li><a href="https://agray5.github.io./">Home</a></li>
 		        	<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
 	    		</ul>
 			</nav>
