--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,8 @@
 	    		<ul>
 	        		<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
 		        	<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
-				<li><a href="mailto:grayaprild@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/agray5">github.com/agray5</a></li>
 	    		</ul>
+				<a href="https://github.com/agray5">github.com/agray5</a>
 			</nav>
 			<div class="container">
 			
