--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,13 +33,13 @@
 			{% include analytics.html %}
 		</head>
 		<body class="flex">
-			<nav>
+			<div id="nav">
 	    		<ul>
 	        		<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
 		        	<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
 	    		</ul>
 				<a href="https://github.com/agray5">github.com/agray5</a>
-			</nav>
+			</div>
 			<div class="container">
 			
 			{{ content }}
