--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,13 @@ body {
 }
 
 /** NAV and FOOTER **/
-#nav ul, footer ul {
+nav ul, footer ul {
     padding: 0px;
     margin-left: 20px;
     list-style: none;
     font-weight: bold;
 }
-#nav ul li, footer ul li {
+nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
