--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,13 +33,13 @@
 			{% include analytics.html %}
 		</head>
 		<body class="flex">
-			<div id="nav">
+			<nav>
 	    		<ul>
 	        		<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
 		        	<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
 	    		</ul>
 				<a href="https://github.com/agray5">github.com/agray5</a>
-			</div>
+			</nav>
 			<div class="container">
 			
 			{{ content }}
@@ -47,6 +47,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
+				<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
 	        		<li><a href="mailto:grayaprild@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/agray5">github.com/agray5</a></li>
 				</ul>
