--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
 	    		</ul>
 				<a href="https://github.com/agray5">github.com/agray5</a>
 			</nav>
+			<a href="/"><i class ="fa fa-home"></i>Home</a>
 			<div class="container">
 			
 			{{ content }}
@@ -47,7 +48,6 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-				<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
 	        		<li><a href="mailto:grayaprild@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/agray5">github.com/agray5</a></li>
 				</ul>
