--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /* Background pattern from Subtle Patterns */
 body {
     background: url(/img/wave.png) repeat 0 0 fixed;
+    overflow: hidden;
 }
 
 /** NAV and FOOTER **/
