--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,8 @@ ul.posts li {
     flex-direction: row;
     flex: 1;
     width: 100%;
-    height: 100%
+    height: 100%;
+    margin-top: -20px;
 }
 /** CLASSES **/
 
