--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ p, div, a {
 }
 
 /** 404 PAGE **/
-#404Wrapper{
+#error404Wrapper{
     height: 100%;
     width: 100%;
     color: silver;
@@ -147,7 +147,7 @@ p, div, a {
 }
 
 #moon0{
-    width="50px";
-    height="50px";
+    width:"50px";
+    height:"50px";
     margin: 0 10px;
 }
