--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,8 @@ p, div, a {
 }
 
 #moon0{
-    width:"50px";
-    height:"50px";
+    width: 50px;
+    height:50px;
     margin: 0 10px;
+    align-self: center;
 }
