--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,7 @@ p, div, a {
     flex-direction: column;
     align-content: center;
     justify-content: center;
+    background: rgba(0, 0, 0, 0.5);
 }
 
 #moon0{
