--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,9 @@ p, div, a {
     background: rgba(0, 0, 0, 0.5);
 }
 
+#error404Wrapper h1, #error404Wrapper p{
+    align-self: center;
+}
 #moon0{
     width: 50px;
     height:50px;
