--- a/css/main.css
+++ b/css/main.css
@@ -148,12 +148,11 @@ p, div, a {
     background: rgba(0, 0, 0, 0.5);
 }
 
-#error404Wrapper h1, #error404Wrapper p{
+#error404Wrapper h1, #error404Wrapper p, #error404Wrapper img{
     align-self: center;
 }
 #moon0{
     width: 50px;
     height:50px;
     margin: 0 10px;
-    align-self: center;
 }
