--- a/css/main.css
+++ b/css/main.css
@@ -138,19 +138,18 @@ p, div, a {
 
 /** 404 PAGE **/
 #error404Wrapper{
-    height: 100%;
-    width: 100%;
     color: silver;
     display: flex;
     flex-direction: column;
     align-content: center;
-    justify-content: center;
+    justify-content: space-between;
     background: rgba(0, 0, 0, 0.5);
 }
 
 #error404Wrapper h1, #error404Wrapper p, #error404Wrapper img{
     align-self: center;
 }
+
 #moon0{
     width: 50px;
     height:50px;
