--- a/css/main.css
+++ b/css/main.css
@@ -138,8 +138,7 @@ p, div, a {
 
 /** 404 PAGE **/
 #error404Wrapper{
-    height: 100%;
-    color: silver;
+    height: 100%; 
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -148,6 +147,11 @@ p, div, a {
 
 #error404Wrapper h1, #error404Wrapper p, #error404Wrapper img{
     align-self: center;
+    color: silver;
+}
+
+#error404Wrapper h1{
+    font-size: 50px;
 }
 
 #wolfGif{
