--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ p, div, a {
     display: flex;
     flex-direction: column;
     align-content: center;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.7);
 }
 
 #error404Wrapper h1, #error404Wrapper p, #error404Wrapper img{
@@ -162,4 +162,31 @@ p, div, a {
     width: 50px;
     height:50px;
     margin: 0 10px;
+}
+
+@keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+
+.stars, .twinkling {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+.stars {
+  background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+  z-index:0;
+}
+
+.twinkling{
+  background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+  z-index:1;
+  animation:move-twink-back 200s linear infinite;
 }
