--- a/css/main.css
+++ b/css/main.css
@@ -171,9 +171,15 @@ p, div, a {
 }
 
 .stars, .twinkling {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:10px;
   width:100%;
   height:100%;
   display:block;
+  
 }
 
 .stars {
