--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,14 +34,15 @@
 		</head>
 		<body class="flex">
 			
-			
 			<div class="container">
-			<nav>
-	    		<ul>
-	        		<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
-		        	<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
-	    		</ul>
-			</nav>
+				<nav class="navbar navbar-default">
+  					<div class="container-fluid">
+    						<ul class="nav navbar-nav">
+      							<li><a href="/"><i class ="fa fa-home">Home</a></li>
+      							<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
+						</ul>
+  					</div>
+				</nav>
 				
 				
 			{{ content }}
