--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 				<nav class="navbar navbar-default">
   					<div class="container-fluid">
     						<ul class="nav navbar-nav">
-      							<li><a href="/"><i class ="fa fa-home">Home</a></li>
+      							<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
       							<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
 						</ul>
   					</div>
