--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,12 @@ footer {
     background-color: lightgray;
 }
 
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    background-color: black;
+    color: #C0C0C0;
+    text-decoration: underline;
+}
+
 /** ICONS **/
 
 i {
