--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ footer {
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     background-color: black;
-    color: #C0C0C0;
+    color: inherited;
     text-decoration: underline;
 }
 
