--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ footer {
     margin: 0;
     color: silver;
     background-color: lightgray;
-    background-image: url("/img/noise.png") repeat;
+    background-image: url("/img/noise.png");
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
