--- a/_includes/bootstrapFallbackToLocal.html
+++ b/_includes/bootstrapFallbackToLocal.html
@@ -1,11 +1,13 @@
   <!-- jQuery CDN -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- jQuery local fallback -->
-  <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="assets/js/jquery-3.1.1.min.js"><\/script>')</script>
   <!-- Bootstrap JS CDN -->
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Bootstrap JS local fallback -->
   <script>if(typeof($.fn.modal) === 'undefined') {document.write('<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"><\/script>')}</script>
+  <!-- Bootstrap CSS CDN -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- Bootstrap CSS local fallback -->
   <div id="bootstrapCssTest" class="hidden"></div>
   <script>
