--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,58 +1,13 @@
 <!DOCTYPE html>
-	<html lang="en-us">
-		<head>
-			<!-- metadata -->
-			<meta charset="utf-8">
-			<meta http-equiv="X-UA-Compatible" content="IE=edge">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<!-- page title -->
-			<title>{{ page.title }}</title>
-			<!-- bootstrap minified CSS -->
-			<link   rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-      				integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-			      	crossorigin="anonymous">
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="css/main.css">
-			<!-- link to google fonts -->
-			<link href='https://fonts.googleapis.com/css?family=Cantata+One' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
-			<!-- font awesome -->
-			<link rel="stylesheet" href="css/font-awesome.css">
-			<!-- javascript -->
-			<script 
-				src="https://code.jquery.com/jquery-3.1.1.min.js"
-				integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  				crossorigin="anonymous">
-			</script>
-			<!-- Latest compiled and minified JavaScript -->
-			<script 
-				src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-				integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
-				crossorigin="anonymous">
-			</script>
-			{% include analytics.html %}
-		</head>
-		<body class="flex">
-			
-			<div class="container">
-				<nav class="navbar navbar-default">
-  					<div class="container-fluid">
-    						<ul class="nav navbar-nav">
-      							<li><a href="/"><i class ="fa fa-home"></i>Home</a></li>
-      							<li><a href="/about"><i class="fa fa-info-circle"></i>About</a></li>
-						</ul>
-  					</div>
-				</nav>
-				
-				
+<html lang="en-us">
+{% include head.html %}
+
+<body class="flex">
+	{% include header.html %}
+		<div class="content">
 			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:grayaprild@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/agray5">github.com/agray5</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+		</div>
+	{% include footer.html %}
+</body>
+
+</html>
