--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -116,7 +116,7 @@ $medium-wide                : 550px;
 $large                      : 1200px;
 $x-large                    : 1800px;
 */
-
+$x-small                    : 300px !default;
 $small                      : 600px !default;
 $medium                     : 768px !default;
 $medium-wide                : 900px !default;
