--- a/_includes/socialMediaLinks.html
+++ b/_includes/socialMediaLinks.html
@@ -1,6 +1,6 @@
-<div class="author__urls-wrapper">
-  <button class="btn btn--inverse">Follow</button>
-  <ul class="author__urls social-icons">
+<!--<div class="author__urls-wrapper">-->
+  <!--<button class="btn btn--inverse">Follow</button>-->
+  <ul class=" social-icons" style="display:inline">
     {% if author.location %}
       <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}</li>
     {% endif %}
@@ -89,4 +89,4 @@
       <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fa fa-fw fa-chain" aria-hidden="true"></i> Wikipedia</a></li>
     {% endif %}
   </ul>
-</div>
+<!--</div>-->
