--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -7,10 +7,16 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 
   .project {
     max-width: 500px;
     min-width: 450px;
+
+    @include breakpoint($x-small) {
+      min-width: 45%;
+    }
+
     list-style: none;
     border-style: solid;
     border-width: 38px 0px 44px;
