--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -259,14 +259,16 @@
     background: #fff;
     box-shadow: 0 0 10px rgba(#000, 0.25);
 
+    background: #939A9E;
+
     a {
       margin: 0;
       padding: 10px 20px;
       font-size: $type-size-5;
 
       &:hover {
-        color: $masthead-link-color-hover;
-        background: mix(#fff, $primary-color, 75%);
+        //color: $masthead-link-color-hover;
+        background: mix(#fff, $primary-color, 15%);
       }
     }
 
