--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -416,9 +416,13 @@
       position: relative;
       //top: -10em;
       left:0;
-      margin-top: -358px;
+      margin-top: 0px;
       opacity: 1;
       z-index: 0;
+
+      @include breakpoint($medium){
+        margin-top: -358px;
+      }
 }
 
 .home_page {
