--- a/css/resume.css
+++ b/css/resume.css
@@ -161,6 +161,41 @@ p {
   margin-top: 10px;
 }
 
+@media (min-width: 768px) {
+  .card {
+    height: 360px;
+    overflow: hidden;
+  }
+}
+
+.card a {
+  max-height: 50%;
+}
+
+.card a img {
+  height: 100%;
+}
+
+@media (min-width: 768px) {
+  .card .card-body {
+    height: 50%;
+  }
+}
+
+@media (min-width: 768px) {
+  .card .card-body .card-text {
+    height: 60%;
+    overflow-y: auto;
+    margin: 0;
+  }
+}
+
+.card .card-body .btn {
+  margin: 0;
+  max-height: 20%;
+  padding: 2px;
+}
+
 #about {
   background-color: black;
   background: linear-gradient(to right, black, 70%, transparent), url("../img/stars.jpg") no-repeat center center fixed;
@@ -204,4 +239,8 @@ p {
   left: -50px;
   right: -50px;
   bottom: -50px;
+}
+
+.row {
+  margin-top: 100px;
 }
