--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,9 @@
 @import '_varibles';
-  $cross-width: 36px;
-  $cross-height: 30px;
 
-  .bm-cross-button {
+$cross-width: 36px;
+$cross-height: 30px;
+
+.bm-cross-button {
     width: $cross-width !important;
     height: $cross-height !important;
     top: $cross-width !important;
@@ -24,74 +25,78 @@
         background: $accent;
       }
     }
-
-  }
+}
   
-  .bm-burger-button {
+.bm-burger-button {
     position: fixed;
     width: $cross-width;
     height: $cross-height;
     left: $cross-width;
     top: $cross-width;
-  }
-  .right .bm-burger-button {
+}
+.right .bm-burger-button {
     left: initial;
     right: 36px;
-  }
-  .bm-burger-bars {
+}
+.bm-burger-bars {
     background: $secondary;
-  }
-  .bm-morph-shape {
+}
+.bm-morph-shape {
     fill: $secondary;
-  }
-  .bm-menu {
+}
+
+.bm-menu-wrap {
+    word-wrap: none;
+}
+
+.bm-menu {
     background: $secondary;
 
     & > nav:first-child {
-      margin-top: $cross-width+50px;
-      height: auto !important;
+        margin-top: $cross-width+50px;
+        height: auto !important;
     }
 
     & .bm-item{
-      color: $primary;
+        color: $primary;
     }
 
     & a {
-      text-decoration: none;
+        text-decoration: none;
 
-      &:hover, &:focus{
-        color: /*#c94e50*/ $accent;
-      }
+        &:hover, &:focus{
+            color: /*#c94e50*/ $accent;
+        }
     }
 
     & .bm-item-list {
 
-      & a{
-        padding: 0.8em;
-        font-weight: 700;
-        text-align: center;
-      }
+        & a{
+            padding: 0.8em;
+            font-weight: 700;
+            text-align: center;
+        }
     }
-  }
+}
  
-  .sideBar {
+.sideBar {
     @media screen and (min-width: $break-small){
-      & .bm-item-list {
-        top: 50%;
-      transform: translateY(50%);
-      }
+        & .bm-item-list {
+            top: 50%;
+            transform: translateY(50%);
+        }
     }
 
     @media screen and (max-width: $break-small){
 
-      & .bm-burger-button {
-        width: $cross-width/2;
-        height: $cross-height/2;
-      }
+        & .bm-burger-button {
+            width: $cross-width/2;
+            height: $cross-height/2;
+        }
 
-      & + div {
-        position: relative;
-        height: $cross-width + 50px;
-      }
+        & + div {
+            position: relative;
+            height: $cross-width + 50px;
+        }
     }
-  }
+}
