--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,3 +9,17 @@ html, body, #___gatsby, #___gatsby>div {
   h1, h2, h3, h4, h5, h6 {
     margin: 0;
   }
+
+#gatsby-focus-wrapper {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.tl-edges {
+  height: 100%;
+  overflow: hidden;
+}
+
+.tl-wrapper {
+  height: 100%;
+}
