--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,7 @@ html, body, #___gatsby, #___gatsby>div {
     height: 100%;
     width: 100%;
     overflow:hidden;
+    font-family: Oxygen Mono, monospace;
   }
   
   h1, h2, h3, h4, h5, h6 {
